test/libhyperion/syntaxTests/nameAndTypeResolution/410_string_literal_not_convertible_to_address_as_assignment.hyp
// A previous implementation claimed the string would be an address
contract AddrString {
    address public test = "Z621c4C2d31BA544412829F2C00360f4c4419E4aDFa2e4ed1";
}
// ----
// TypeError 7407: (116-159): Type literal_string "Z621c4C2d31BA544412829F2C00360f4c4419E4aDFa2e4ed1" is not implicitly convertible to expected type address.
